@@ -880,8 +880,7 @@ span.rmess, span.nrmess {
 }
 
 .databox td, .databox th {
-	padding-left: 3px;
-	padding-right: 3px;
+	padding: 6px;
 }
 
 /* Style for login form */
