@@ -1,3 +1,11 @@
+2013-06-04  Sancho Lerena <slerena@artica.es>
+
+	* functions_groups.php, 
+	group_view.php: removed icons. Simplify render.
+
+ 	* styles/pandora.css: Added some space on databox
+	tables (apply on main agent window).
+
 2013-06-03  Sergio Martin <sergio.martin@artica.es>
 
 	* include/functions_graph.php
